gcc/testsuite/rust/rustc/ui/parser/generic-statics.rs
static S<T>: i32 = 0;
// { dg-error "" "" { target *-*-* } .-1 }

fn main() {}

